Import of HACKMAN/Linux-Setns-0.04 from CPAN.
gitpan-cpan-distribution: Linux-Setns
gitpan-cpan-version:      0.04
gitpan-cpan-path:         HACKMAN/Linux-Setns-0.04.tar.gz
gitpan-cpan-author:       HACKMAN
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-Linux-Setns version 0.02
+Copyright (C) 2014 by Marian HackMan Marinov
+
+Linux-Setns
 ========================
 
 setns is used to change the current namespace of the process by specifying a file descriptor to a currently available namespace.
